# formation-tdd-dec2015

./: .gitignore  README.md
exemples/kata-age-utilisateur-java/: README.md  settings.gradle
exemples/kata-bowling-csharp/: KataBowling.sln
exemples/kata-bowling-csharp/KataBowling/: KataBowling.csproj  Partie.cs  PartieTest.cs
exemples/kata-bowling-java/: README.md  settings.gradle
exemples/kata-facteurs-premiers-java/: README.md  settings.gradle
exemples/kata-fibonacci-java/: README.md  settings.gradle
exemples/kata-jeu-de-la-vie-csharp/: KataJeuDeLaVie.sln
exemples/kata-jeu-de-la-vie-csharp/KataJeuDeLaVie/: Grille.cs  GrilleTest.cs  KataJeuDeLaVie.csproj  Position.cs
exemples/kata-jeu-de-la-vie-java/: README.md  settings.gradle
exemples/kata-molkky-java/: README.md  settings.gradle
exemples/kata-tennis-java/: README.md  settings.gradle
exemples/kata-todo-js/: package.json  server.js
exemples/kata-todo-js/lib/: Server.js
exercices/: age-utilisateur.txt  annes-bisextiles.txt  bowling.txt  facteurs-premiers.txt  harry-potter.txt  retour-a-la-ligne.txt  tennis.txt  thermometre.txt  todo-list.txt
presentations/jeu-de-la-vie/: index.html
presentations/tdd-en-5-minutes/: index.html
tdd-kit/tdd-kit-cpp/: .gitignore  CMakeLists.txt  README.md
tdd-kit/tdd-kit-cpp/sources/fizzbuzz/: fizzbuzz.cpp  fizzbuzz.h  fizzbuzz_tests.cpp
tdd-kit/tdd-kit-cpp/sources/mocks/: console.h  date_service.h  mock_tests.cpp  stub_tests.cpp
tdd-kit/tdd-kit-csharp/: README.md  TddKitCsharp.sln
tdd-kit/tdd-kit-ruby/: .rubocop.yml  Gemfile  README.md  Rakefile
(+52 files in other folders)
